# transcribe

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  transcribe.py
